完成列表,修复功能问题

--- a/window/taskbar.scss
+++ b/window/taskbar.scss
@@ -30,7 +30,12 @@
         position: absolute;
         left: 50%;
         bottom: 3rem;
-        transform: translateX(-50%);
+        transform: translate(-50%,120%);
+        transition: transform .2s;
+
+        &[data-active]{
+            transform: translateX(-50%);
+        }
     }
 
     > .widget{
